          (SIP protocol).
        - Removed "onContinue" property on Message introduced in 
          2.0 M6 until real use cases are identified. 
        - Added Protocol#technicalName property to indicate the actual
          name used on the wire, such as "HTTP" for Protocol#HTTPS.
        - Added Request#maxForwards property mapping to the HTTP header
          "Max-Forwards".
     - Enhancements
        - Added a new Jackson extension, with transparent conversion
          between JSON representations and objects.
          Suggested by Tal Liron.    
        - Adjusted scoring in DefaultConverter for Form objects and
          in XstreamConverter for objects with unspecified target
          media type.      
        - ServerResource now rejects unconvertable parameters with
          a 415 status.
        - ServerResource now supports empty POST and PUT requests.
        - Added converter of Freemarker Template objects in the 
          Freemarker extension.
        - Added converter of Velocity Template objects in the 
          Velocity extension.
        - Added converter of Graph objects in the RDF extension.
        - Added converter of Syndfeed objects in the ROME extension.
        - Added converter for the JiBX extension.
        - Added converter for Message objects to representations in the
          JavaMail extension.
        - Added converter for WebRowSet, JdbcResult, ResultSet objects
          to representations in the JDBC extension.
        - Added support of the dataservices extension in Android.
        - Added GWT object serialization.
        - Added context's attribute: org.restlet.attribute.offsetPath 
          for the servlet extension. Proposed by Carsten Lohmann.
        - Added support for additional marshalling properties to the 
          Jaxb extension.
        - Added support of Chrome browser when tunneling with user 
          agent. Suggested by Jonathan Hall.